@@ -54,4 +54,5 @@ SOURCE DEBIAN Tue Apr  4 14:34:12 CEST 2007 (better debian/control docs)
 SOURCE Mon Jun  4 13:19:44 CEST 2007 (monthly version)
 SOURCE Mon Jun  4 14:19:44 CEST 2007 (autoconf rust)
 SOURCE Mon Jun  4 17:28:44 CEST 2007 (license check)
-SOURCE DEBIAN Wed Apr  5 14:34:12 CEST 2007 (dust off debian)
+SOURCE DEBIAN Wed Jun  5 14:34:12 CEST 2007 (dust off debian)
+SOURCE DEBIAN Fri Jun  8 10:11:25 CEST 2007 (v 2.1.6 build-fix)
